[package]
name = "rust_webass_test1"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde", "wasmbind"] }
chinese-lunisolar-calendar = "0.1.22"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3.66", features = [
    "Document",
    "Element",
    "Window",
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
